fixed home view on mobile

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -117,6 +117,12 @@
   }
 }
 
+@media screen and (max-width: 500px) and (max-height: 600px) {
+  .right-main {
+    margin-top: 50px;
+  }
+}
+
 .inline-list > li:not(:last-child)::after {
   content: "|";
   margin: 0 0.5em;
@@ -235,6 +241,12 @@
   border-left: 1px solid #adadad;
 }
 
+@media screen and (max-width: 500px) {
+  .grid {
+    grid-template-columns: initial;
+  }
+}
+
 .img-cell {
   display: flex;
   align-items: center;
@@ -279,12 +291,25 @@
   color: #ffffff;
 }
 
+@media screen and (max-width: 500px) {
+  .slides p {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
 .slides footer {
   padding: 40px 0;
   text-align: center;
   letter-spacing: 0.5px;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (max-width: 500px) {
+  .slides footer {
+    font-size: 0.6875rem;
+  }
 }
 
 /* Slider */
@@ -305,6 +330,13 @@
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+}
+
+@media screen and (max-width: 500px) {
+  .dot {
+    height: 6px;
+    width: 6px;
+  }
 }
 
 .active {
